--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@
     <img src="/content/images/logo.svg" alt="Fabio.">
   </a>
   <div class="page-header__links">
-    <a href="/about/index.html">about</a>
+    <a href="/about">about</a>
     <a href="mailto:fabio@sangregorio.dev" target="_blank">contact</a>
   </div>
 </header> 
