--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <img src="/content/images/logo.svg" alt="Fabio.">
   </a>
   <div class="page-header__links">
-    <a href="/about/index.html">about</a>
+    <a href="/about">about</a>
     <a href="mailto:fabio@sangregorio.dev" target="_blank">contact</a>
   </div>
 </header> 
@@ -104,7 +104,7 @@
     <!-- </a> -->
   </div>
  
-  <a href="/projects/index.html" class="latest__link link--decorate link--arrow">
+  <a href="/projects" class="latest__link link--decorate link--arrow">
     See more work
   </a>
 </section> 
@@ -369,7 +369,7 @@
 <section class="section visit" data-aos="fade-up">
   <div class="visit__text">
     <header class="h1 visit__h1">Want to know more about me?</header>
-    <a href="/about/index.html" class="visit__link link--decorate link--arrow">
+    <a href="/about" class="visit__link link--decorate link--arrow">
       Visit my about page
     </a>
   </div>
