Add images optimization, remove index.html in about links, remove unused projects images, move google fonts css to local

--- a/about/index.html
+++ b/about/index.html
@@ -16,9 +16,6 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="theme-color" content="#ffffff">
  
-	<!-- Fonts -->
-	 <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600" rel="stylesheet">
-
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="/css/bundle.min.css">
 
@@ -32,7 +29,7 @@
     <img src="/images/logo.svg" alt="Fabio.">
   </a>
   <div class="page-header__links">
-    <a href="/about/index.html">about</a>
+    <a href="/about/">about</a>
     <a href="mailto:fabio@sangregorio.dev" target="_blank">contact</a>
   </div>
 </header> 
