--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="theme-color" content="#ffffff">
  
-	<!-- Fonts -->
-	 <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600" rel="stylesheet">
-
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="/css/bundle.min.css">
 
@@ -32,7 +29,7 @@
     <img src="/images/logo.svg" alt="Fabio.">
   </a>
   <div class="page-header__links">
-    <a href="/about/index.html">about</a>
+    <a href="/about/">about</a>
     <a href="mailto:fabio@sangregorio.dev" target="_blank">contact</a>
   </div>
 </header> 
@@ -336,7 +333,7 @@
 <section class="section visit" data-aos="fade-up">
   <div class="visit__text">
     <header class="h1 visit__h1">Want to know more about me?</header>
-    <a href="/about/index.html" class="visit__link link--decorate link--arrow">
+    <a href="/about/" class="visit__link link--decorate link--arrow">
       Visit my about page
     </a>
   </div>
