Update university experience

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="page-subtitle" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
       <p>
-        I’m *almost* a computer engineering graduate currently working as a 
+        I’m a computer engineering graduate currently working as a 
         frontend web developer in Bergamo, Italy. I can help you with building 
         all-things web - especially web apps - and software.<br>
         How can I help you?
@@ -109,7 +109,7 @@
           <a href="https://www.unibg.it/" target="_blank" class="experience__title">
             Bergamo University
           </a>
-          <div class="experience__role">Computer engineering master’s degree </div>
+          <div class="experience__role">Computer engineering bachelor’s degree </div>
         </div>
         <div class="experience__dates js-experience-animate">
           <div class="experience__end-date">Current</div>
@@ -117,7 +117,7 @@
         </div>
       </header>
       <div class="experience__description js-experience-animate">
-        I'm currently attending the first year of Master in Computer Engineering, where I completed the following core courses: Information Technology 2, Databases 2, Industrial Automation, Software Engineering, Statistics 2, Management Control Systems.
+        I'm currently attending the first year of my Master's degree in Computer Engineering, where I completed the following core courses: Information Technology 2, Databases 2, Industrial Automation, Software Engineering, Statistics 2, Management Control Systems.
       </div> 
     </article>
   
