Microfix to homepage mobile footer

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     </a>
   </div>
   <div>
-    <img src="/images/guitar.jpg" alt="Custom guitar." title="">z
+    <img src="/images/guitar.jpg" alt="Custom guitar." title="">
   </div>
 </section>  
 	</main>
