--- a/projects/index.html
+++ b/projects/index.html
@@ -26,13 +26,13 @@
 
 	<header class="page-header">
   <a href="/" class="logo">
-    <img src="/images/logo.svg" alt="Fabio.">
+    <img data-dark-theme-src="/images/logo--dark.svg" src="/images/logo.svg" alt="Fabio.">
   </a>
   <div class="page-header__links">
     <a href="/about/">about</a>
     <a href="mailto:fabio@sangregorio.dev" target="_blank">contact</a>
   </div>
-</header> 
+</header>  
 	<main class="page-main">
 		
 
@@ -134,7 +134,7 @@
     </a>
   </div>
   <div class="footer__bar">
-    <a href="/" class="footer__logo"><img src="/images/logo.svg" alt="Fabio."></a>
+    <a href="/" class="footer__logo"><img data-dark-theme-src="/images/logo--dark.svg" src="/images/logo.svg" alt="Fabio."></a>
     <div class="footer__message">Have a wonderful day! :)</div>
     <div class="footer__links">
       <a target="_blank" href="https://github.com/fabiosangregorio">github</a>
@@ -144,6 +144,9 @@
   </div>
 </footer> 
 
+  <div id="toggle-theme">
+		<img data-dark-theme-src="/images/sun--dark.svg" src="/images/sun.svg" alt="Toggle dark mode">
+	</div>
 	<script src="/js/bundle.min.js" type="text/javascript"></script>
 </body>
 
