Edit contents fabiosangregorio/personal-website@11e006034006542420d8d75269b8ba104acb1736

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       <div class="reveal-text">
         <div class="reveal-text__content">
           Hey there!  
-          <span class="atf__hand-container hand-container move">
+          <a href="https://codepen.io/fabiosangregorio/" target="_blank" class="atf__hand-container hand-container move">
             <img src="/images/hand.png" class="atf__hand hand wave" alt="*waves*" title="*waves*">
-          </span>
+          </a>
           
           <br>
           I’m Fabio, developer, student and ski lover.
@@ -354,6 +354,7 @@
     <div class="footer__message">Have a wonderful day! :)</div>
     <div class="footer__links">
       <a target="_blank" href="https://github.com/fabiosangregorio">github</a>
+      <a target="_blank" href="https://sourcerer.io/fabiosangregorio">sourcerer</a>
       <a target="_blank" href="https://linkedin.com/in/fabiosangregorio">linkedin</a>
       <a target="_blank" href="https://instagram.com/fabio.sang">instagram</a>
     </div>
