--- a/projects/index.html
+++ b/projects/index.html
@@ -138,6 +138,7 @@
     <div class="footer__message">Have a wonderful day! :)</div>
     <div class="footer__links">
       <a target="_blank" href="https://github.com/fabiosangregorio">github</a>
+      <a target="_blank" href="https://sourcerer.io/fabiosangregorio">sourcerer</a>
       <a target="_blank" href="https://linkedin.com/in/fabiosangregorio">linkedin</a>
       <a target="_blank" href="https://instagram.com/fabio.sang">instagram</a>
     </div>
