Improve website SEO. Add sitemap grunt dependency. fabiosangregorio/personal-website@81d77dbcd1eca79e4f4f19b04484b4ef06b003e5

--- a/index.html
+++ b/index.html
@@ -15,22 +15,33 @@
 	<meta name="application-name" content="Fabio.">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="theme-color" data-dark-theme-content="#121212" content="#ffffff">
- 
+	<title>Fabio. - developer, student and ski lover</title>
+	<meta property="og:title" content="Fabio. - developer, student and ski lover">
+	<meta property="twitter:title" content="Fabio. - developer, student and ski lover">
+	<meta name="description" content="I’m a computer engineering graduate currently working as a frontend web developer in Bergamo, Italy. I can help you with building all-things web and software.">
+	<meta property="og:description" content="I’m a computer engineering graduate currently working as a frontend web developer in Bergamo, Italy. I can help you with building all-things web and software.">
+	<meta property="twitter:description" content="I’m a computer engineering graduate currently working as a frontend web developer in Bergamo, Italy. I can help you with building all-things web and software.">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="https://fabio.sangregorio.dev/images/logo.svg">
+	<meta property="twitter:image" content="https://fabio.sangregorio.dev/images/logo.svg">
+	<meta property="og:site_name" content="Fabio.">
+	<meta property="og:url" content="https://fabio.sangregorio.dev/">
+	<meta name="twitter:card" content="summary">
+
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="/css/bundle.min.css">
 
-	<title>Fabio.</title>
 </head>
 
 <body class="home">
 
 	<header class="page-header">
-  <a href="/" class="logo">
+  <a href="/" class="logo" title="Fabio.">
     <img data-dark-theme-src="/images/logo--dark.svg" src="/images/logo.svg" alt="Fabio.">
   </a>
   <div class="page-header__links">
-    <a href="/about/">about</a>
-    <a href="mailto:fabio@sangregorio.dev" target="_blank">contact</a>
+    <a href="/about/" title="About">about</a>
+    <a href="mailto:fabio@sangregorio.dev" target="_blank" title="Contact">contact</a>
   </div>
 </header>  
 	<main class="page-main">
@@ -43,12 +54,12 @@
       <div class="reveal-text">
         <div class="reveal-text__content">
           Hey there!  
-          <a href="https://codepen.io/fabiosangregorio/" target="_blank" class="atf__hand-container hand-container move">
+          <a title="*waves*" href="https://codepen.io/fabiosangregorio/" target="_blank" class="atf__hand-container hand-container move">
             <img src="/images/hand.png" class="atf__hand hand wave" alt="*waves*" title="*waves*">
           </a>
           
           <br>
-          I’m Fabio, developer, student and ski lover.
+          <h1>I’m Fabio, developer, student and ski lover.</h1>
         </div>
       </div>
     </div>
@@ -59,7 +70,7 @@
         all-things web - especially web apps - and software.<br>
         How can I help you?
       </p>
-      <a href="mailto:fabio@sangregorio.dev" class="atf__link link--decorate">fabio@sangregorio.dev</a>
+      <a title="Send me an email :)" href="mailto:fabio@sangregorio.dev" class="atf__link link--decorate">fabio@sangregorio.dev</a>
     </div>
   </div>
   <div class="atf__image">
@@ -77,18 +88,18 @@
 
 <section class="section experiences-section js-experiences-section">
   <header class="h1 experiences__h1" data-aos="fade-up" data-aos-delay="50">
-    <div>I worked with amazing people.</div>
+    <div><h2>I worked with amazing people.</h2></div>
     <div class="muted experiences__mobile-opener">(tap to <span class="js-experiences-toggle">show</span> details)</div>
   </header>
   <header class="h1 experiences__h1" data-aos="fade-up" data-aos-delay="50">
-    <div>I'm also currently studying.</div>
+    <div><h2>I'm also currently studying.</h2></div>
     <div class="muted experiences__mobile-opener">(tap to <span class="js-experiences-toggle">show</span> details)</div>
   </header>
   
     <article class="experience" data-aos="fade-up">
       <header class="experience__header">
         <div class="experience__position">
-          <a href="https://www.yourbiz.it" target="_blank" class="experience__title">
+          <a title="Yourbiz" href="https://www.yourbiz.it" target="_blank" class="experience__title">
             Yourbiz
           </a>
           <div class="muted experience__role">Frontend web developer</div>
@@ -106,7 +117,7 @@
     <article class="experience" data-aos="fade-up">
       <header class="experience__header">
         <div class="experience__position">
-          <a href="https://www.unibg.it/" target="_blank" class="experience__title">
+          <a title="Bergamo University" href="https://www.unibg.it/" target="_blank" class="experience__title">
             Bergamo University
           </a>
           <div class="muted experience__role">Computer engineering bachelor’s degree </div>
@@ -124,7 +135,7 @@
     <article class="experience" data-aos="fade-up">
       <header class="experience__header">
         <div class="experience__position">
-          <a href="https://www.sorint.it" target="_blank" class="experience__title">
+          <a title="Sorint.LAB" href="https://www.sorint.it" target="_blank" class="experience__title">
             Sorint.LAB
           </a>
           <div class="muted experience__role">R&amp;D dpt. school internship</div>
@@ -142,7 +153,7 @@
     <article class="experience" data-aos="fade-up">
       <header class="experience__header">
         <div class="experience__position">
-          <a href="https://itisdalmine.edu.it/" target="_blank" class="experience__title">
+          <a title="IIS G. Marconi" href="https://itisdalmine.edu.it/" target="_blank" class="experience__title">
             IIS G. Marconi
           </a>
           <div class="muted experience__role">IT high school diploma</div>
@@ -160,7 +171,7 @@
 </section>
 
 <section class="section">
-  <header class="skills__h1 h1" data-aos="fade-up" data-aos-delay="50">They allowed me to learn some powerful skills.</header>
+  <header class="skills__h1 h1" data-aos="fade-up" data-aos-delay="50"><h2>They allowed me to learn some powerful skills.</h2></header>
   <div class="skills" data-aos="fade-up">
     <div class="muted skills__legend">
       <div class="skills__block">
@@ -333,7 +344,7 @@
 <section class="section visit" data-aos="fade-up">
   <div class="visit__text">
     <header class="h1 visit__h1">Want to know more about me?</header>
-    <a href="/about/" class="visit__link link--decorate link--arrow">
+    <a title="About" href="/about/" class="visit__link link--decorate link--arrow">
       Visit my about page
     </a>
   </div>
@@ -345,7 +356,7 @@
 	<footer class="page-footer">
   <div class="footer__cta">
     <div class="page-title footer__title">Let me know if I can help you with anything.</div>
-    <a href="mailto:fabio@sangregorio.dev" class="footer__cta-link link--decorate link--decorate-visible" target="_blank">
+    <a title="Send me and email :)" href="mailto:fabio@sangregorio.dev" class="footer__cta-link link--decorate link--decorate-visible" target="_blank">
       fabio@sangregorio.dev
     </a>
   </div>
@@ -353,10 +364,10 @@
     <a href="/" class="footer__logo"><img data-dark-theme-src="/images/logo--dark.svg" src="/images/logo.svg" alt="Fabio."></a>
     <div class="footer__message">Have a wonderful day! :)</div>
     <div class="footer__links">
-      <a target="_blank" href="https://github.com/fabiosangregorio">github</a>
-      <a target="_blank" href="https://sourcerer.io/fabiosangregorio">sourcerer</a>
-      <a target="_blank" href="https://linkedin.com/in/fabiosangregorio">linkedin</a>
-      <a target="_blank" href="https://instagram.com/fabio.sang">instagram</a>
+      <a title="Github" target="_blank" href="https://github.com/fabiosangregorio">github</a>
+      <a title="Sourcerer" target="_blank" href="https://sourcerer.io/fabiosangregorio">sourcerer</a>
+      <a title="Linkedin" target="_blank" href="https://linkedin.com/in/fabiosangregorio">linkedin</a>
+      <a title="Instagram" target="_blank" href="https://instagram.com/fabio.sang">instagram</a>
     </div>
   </div>
 </footer> 
