Fix homepage experiences mobile spacing fabiosangregorio/personal-website@e1b84319e6d7e7c87c7852d778607f65df6103cf

--- a/index.html
+++ b/index.html
@@ -53,24 +53,26 @@
     <div class="page-title">
       <div class="reveal-text">
         <div class="reveal-text__content">
-          Hey there!  
-          <a title="*waves*" href="https://codepen.io/fabiosangregorio/" target="_blank" class="atf__hand-container hand-container move">
+          Hey there!
+          <a title="*waves*" href="https://codepen.io/fabiosangregorio/" target="_blank"
+            class="atf__hand-container hand-container move">
             <img src="/images/hand.png" class="atf__hand hand wave" alt="*waves*" title="*waves*">
           </a>
-          
+
           <br>
           <h1>I’m Fabio, developer, student and ski lover.</h1>
         </div>
       </div>
     </div>
-    <div class="page-subtitle" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+    <div class="page-subtitle" data-aos="fade-up" data-aos-duration="700" data-aos-delay="800">
       <p>
-        I’m a computer engineering graduate currently working as a 
-        frontend web developer in Bergamo, Italy. I can help you with building 
+        I’m a computer engineering graduate currently working as a
+        frontend web developer in Bergamo, Italy. I can help you with building
         all-things web - especially web apps - and software.<br>
         How can I help you?
       </p>
-      <a title="Send me an email :)" href="mailto:fabio@sangregorio.dev" class="atf__link link--decorate">fabio@sangregorio.dev</a>
+      <a title="Send me an email :)" href="mailto:fabio@sangregorio.dev"
+        class="atf__link link--decorate">fabio@sangregorio.dev</a>
     </div>
   </div>
   <div class="atf__image">
